--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Intent_20211113">
         <activity
+            android:name=".EditNicknameActivity2"
+            android:exported="false" />
+        <activity
             android:name=".ViewMessageActivity"
             android:exported="false" />
         <activity
